update(requirements.txt): add bcrypt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-matplotlib
-pandas
-altair
-prophet
-psycopg2-binary
+streamlit==1.43.1
+matplotlib==3.10.1
+pandas==2.2.3
+altair==5.5.0
+prophet==1.1.6
+psycopg2-binary==2.9.10
+bcrypt==4.3.0
